[gd_scene load_steps=9 format=2]

[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Monsters/Utilities/ObstacleAvoider.tscn" type="PackedScene" id=2]
[ext_resource path="res://Monsters/Utilities/EnemyHitBoxTracker.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Monster.gd" type="Script" id=5]
[ext_resource path="res://scripts/HitZone.gd" type="Script" id=6]
[ext_resource path="res://images/ship9.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 30.0025
height = 53.5302

[node name="Monster" type="Node2D"]
position = Vector2( 2.2324, 13.9975 )
scale = Vector2( 0.35, 0.35 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.2324, 0.00249958 )
rotation = -1.57079
texture = ExtResource( 7 )

[node name="HP" type="Label" parent="."]
margin_left = -4.01354
margin_top = -6.0139
margin_right = 1.98646
margin_bottom = -5.0139
rect_scale = Vector2( 0.05, 0.05 )
custom_fonts/font = SubResource( 1 )
text = "0/0"

[node name="Poison" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HitZone" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="ShootingZone" parent="." instance=ExtResource( 4 )]
scale = Vector2( 2, 2 )

[node name="SensingZone" parent="." instance=ExtResource( 4 )]
scale = Vector2( 2.667, 2.667 )

[node name="StabilizedAnchor" type="Node2D" parent="."]

[node name="HealthBar" type="ColorRect" parent="StabilizedAnchor"]
margin_left = -34.2324
margin_top = -6.99751
margin_right = 105.768
margin_bottom = 21.0024
rect_scale = Vector2( 0.5, 0.5 )
color = Color( 0.72549, 0.0823529, 0.0823529, 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="ObstacleAvoider" parent="." instance=ExtResource( 2 )]
